Update mobile layout issues on Found Successful and Submission Successful screens

--- a/frontend/src/stylesheets/add-item-screen.css
+++ b/frontend/src/stylesheets/add-item-screen.css
@@ -150,7 +150,8 @@
 }
 
 .description-box {
-    height: 70px;
+    height: 7em;
+    font-size: 1.4em;
 }
 
 .form-btns-container {
@@ -161,17 +162,10 @@
     height: 100%;
 }
 
-.found-comment-thank-you {
-    font-size: 1.5rem;
-    font-family: var(--main-text-font);
-    font-weight: bold;
-    width: 60%;
-    margin: auto;
-    padding: 1em 0;
-    text-align: center;
-}
-
 @media(min-width: 368px) {
+    .description-box {
+        width: 18em;
+    }
     .submit-button {
         font-size: 1.6rem;
     }
@@ -203,7 +197,7 @@
         font-size: 1.6em;
     }
     .form-text {
-        font-size: 1.8em;
+        font-size: 1.7rem;
     }
     .description-box {
         height: 100px;
